mobile first develop

--- a/index.html
+++ b/index.html
@@ -1,125 +1,283 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Circle Agency</title>
+    <link rel="stylesheet" href="resources/styles/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Circle Agency</title>
-  <link rel="stylesheet" href="resources/styles/style.css" />
-</head>
+  <body>
+    <header>
+      <div class="container">
+        <nav>
+          <div class="logo">
+            <a href="./index.html">
+              <img
+                src="./resources/images/logos/circle.svg"
+                alt="Circle Agency Logo"
+              />
+            </a>
+          </div>
 
-<body>
+          <div class="menu">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Project Page-Simple</a></li>
+              <li><a href="#">Projects</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">About</a></li>
+            </ul>
+          </div>
 
-  <nav>
-    <div class="logo">
-      <a href="./index.html">
-        <img src="./resources/images/logos/circle.svg" alt="Circle Agency Logo" />
-      </a>
-    </div>
-
-    <div class="menu">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Project Page-Simple</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
-    </div>
-
-    <div class="contact">
-      <a href="#" class="contact-btn">Contact Us</a>
-    </div>
-  </nav>
-
-  <main>
-    <section id="hero">
-      <div class="header-text">
-        <h1>Empower Your Business With Stunning Design!</h1>
-        <p>Circle is a digital design and development studio.
-          We design and develop astonishing websites and mobile apps.</p>
+          <div class="contact">
+            <a href="#" class="contact-btn">Contact Us</a>
+          </div>
+        </nav>
       </div>
-      <div class="header-link-button">
-        <a href="#">See our work</a>
-        <a href="#" class="contact-btn">Get in touch</a>
+    </header>
+
+    <main>
+      <section id="hero">
+        <div class="container">
+          <div class="hero-text">
+            <h1>Empower Your Business With Stunning Design!</h1>
+            <p>
+              Circle is a digital design and development <br />studio.<br />
+              We design and develop astonishing websites and mobile apps.
+            </p>
+            <div class="hero-container-button">
+              <a href="#" class="contact-btn">Get in touch</a>
+              <a href="#" class="work-btn">See our work</a>
+            </div>
+          </div>
+
+          <div class="hero-pictures">
+            <img
+              src="resources\images\hero-section\hero-image.png"
+              alt="Hero Image"
+            />
+            <img
+              src="resources\images\hero-section\card-1.png"
+              alt="Hero Image"
+            />
+            <img
+              src="resources\images\hero-section\card-2.png"
+              alt="Hero Image"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section id="partners">
+        <div class="container">
+          <div class="partners-logos">
+            <a href="https://www.amazon.es" target="_blank">
+              <img
+                src="resources/images/logos/amazon-logo.svg"
+                alt="Amazon Logo"
+                class="partners-logos-brand"
+              />
+            </a>
+            <a href="https://www.nike.com" target="_blank">
+              <img
+                src="resources/images/logos/Logo_NIKE.svg"
+                alt="Nike Logo"
+                class="partners-logos-brand"
+              />
+            </a>
+            <a href="https://www.adidas.com" target="_blank">
+              <img
+                src="resources/images/logos/Adidas_Logo.svg"
+                alt="Adidas Logo"
+                class="partners-logos-brand"
+              />
+            </a>
+            <a href="https://www.airbnb.com" target="_blank">
+              <img
+                src="resources/images/logos/airbnb-logo.svg"
+                alt="Airbnb Logo"
+                class="partners-logos-brand"
+              />
+            </a>
+            <a href="https://www.google.es" target="_blank">
+              <img
+                src="resources/images/logos/google-logo.svg"
+                alt="Google Logo"
+                class="partners-logos-brand"
+              />
+            </a>
+            <a href="https://www.microsoft.com" target="_blank">
+              <img
+                src="resources/images/logos/microsoft-logo.svg"
+                alt="Microsoft Logo"
+                class="partners-logos-brand"
+              />
+            </a>
+            <a href="https://www.fedex.com" target="_blank">
+              <img
+                src="resources/images/logos/fedex-logo.svg"
+                alt="Fedex Logo"
+                class="partners-logos-brand"
+              />
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section id="projects">
+        <h2 class="section-title">Recent Projects</h2>
+        <div class="container">
+          <div class="js-projects">
+            <div class="project">
+              <img
+                src="resources/images/projects-section/1.jpg"
+                alt="Project Imagen"
+              />
+              <div class="text-project">
+                <h3>
+                  sunt aut facere repellat provident occaecati excepturi optio
+                  reprehenderit
+                </h3>
+                <p>
+                  quia et suscipit suscipit recusandae consequuntur expedita et
+                  cum reprehenderit molestiae ut ut quas totam nostrum rerum est
+                  autem sunt rem eveniet architecto
+                </p>
+                <a href="project.html?id=1">Learn More</a>
+              </div>
+            </div>
+
+            <div class="project">
+              <img
+                src="resources/images/projects-section/2.jpg"
+                alt="Project Imagen"
+              />
+              <div class="text-project">
+                <h3>
+                  sunt aut facere repellat provident occaecati excepturi optio
+                  reprehenderit
+                </h3>
+                <p>
+                  quia et suscipit suscipit recusandae consequuntur expedita et
+                  cum reprehenderit molestiae ut ut quas totam nostrum rerum est
+                  autem sunt rem eveniet architecto
+                </p>
+                <a href="project.html?id=1">Learn More</a>
+              </div>
+            </div>
+
+            <div class="project">
+              <img
+                src="resources/images/projects-section/3.jpg"
+                alt="Project Imagen"
+              />
+              <div class="text-project">
+                <h3>
+                  sunt aut facere repellat provident occaecati excepturi optio
+                  reprehenderit
+                </h3>
+                <p>
+                  quia et suscipit suscipit recusandae consequuntur expedita et
+                  cum reprehenderit molestiae ut ut quas totam nostrum rerum est
+                  autem sunt rem eveniet architecto
+                </p>
+                <a href="project.html?id=1">Learn More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="clients">
+        <div class="container">
+          <h2>Hear What Our Clients Have to Say</h2>
+          <p>
+            "Circle helped us through every stage of our startup. We really
+            enjoyed working with you."
+          </p>
+          <div class="profile">
+            <img
+              src="resources/images/testimonial-section/profile.png"
+              alt="Profile Image"
+            />
+            <div>
+              <h4>Kristin Watson</h4>
+              <span>Booking.com</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="services">
+        <h2 class="section-title">Our Services</h2>
+        <div class="container">
+          <div class="services-container">
+            <div class="services-container-logo">
+              <img
+                src="resources/images/services-section/icons/1.svg"
+                alt="service1 logo"
+              />
+            </div>
+            <h3>User Interface Design</h3>
+            <p>
+              Circle provides you with a stunning user interface design that is
+              accessible to everyone.
+            </p>
+            <a href="#">Learn More</a>
+          </div>
+          <div class="services-container">
+            <div class="services-container-logo">
+              <img
+                src="resources/images/services-section/icons/2.svg"
+                alt="service2 logo"
+              />
+            </div>
+            <h3>User Experience Design</h3>
+            <p>
+              Circle always focuses on delivering the best user experience to
+              your customers.
+            </p>
+            <a href="#">Learn More</a>
+          </div>
+          <div class="services-container">
+            <div class="services-container-logo">
+              <img
+                src="resources/images/services-section/icons/3.svg"
+                alt="service3 logo"
+              />
+            </div>
+            <h3>Application Development</h3>
+            <p>
+              We develop high-quality mobile and web applications using the
+              latest technology stack.s
+            </p>
+            <a href="#">Learn More</a>
+          </div>
+        </div>
+      </section>
+
+      <section id="questions"></section>
+    </main>
+
+    <footer>
+      <div class="footer-address">
+        <div class="footer-address-logo">
+          <img src="./resources/images/logos/circle.svg" alt="Logo Circle" />
+        </div>
+        <div class="footer-address-text">
+          <p>2972 Westheimer Rd. Santa Ana,<br />Illinois 85486</p>
+        </div>
       </div>
-      <div class="header-pictures">
-        <img src="resources\images\hero-section\hero-image.png" alt="Hero Image">
-        <img src="resources\images\hero-section\card-1.png" alt="Hero Image">
-        <img src="resources\images\hero-section\card-2.png" alt="Hero Image">
+      <div class="footer-links">
+        <a href="#">Team</a>
+        <a href="#">Services</a>
+        <a href="#">About Us</a>
+        <a href="#">Press</a>
+        <a href="#">Projects</a>
+        <a href="#">Privacy Policy</a>
       </div>
-    </section>
-
-    <section id="partners">
-      <div class="partners-logos">
-        <a href="https://www.amazon.es" target="_blank">
-          <img src="resources/images/logos/amazon-logo.svg" alt="Amazon Logo" class="partners-logos-brand" />
-        </a>
-        <a href="https://www.nike.com" target="_blank">
-          <img src="resources/images/logos/airbnb-logo.svg" alt="Nike Logo" class="partners-logos-brand" />
-        </a>
-      </div>
-      <a href="https://www.adidas.com" target="_blank">
-        <img src="resources/images/logos/Adidas_Logo.svg" alt="Adidas Logo" class="partners-logos-brand" />
-      </a>
-      <a href="https://www.airbnb.com" target="_blank">
-        <img src="resources/images/logos/airbnb-logo.svg" alt="Airbnb Logo" class="partners-logos-brand" />
-      </a>
-      <a href="https://www.google.es" target="_blank">
-        <img src="resources/images/logos/google-logo.svg" alt="Google Logo" class="partners-logos-brand" />
-      </a>
-      <a href="https://www.microsoft.com" target="_blank">
-        <img src="resources/images/logos/microsoft-logo.svg" alt="Microsoft Logo" class="partners-logos-brand" />
-      </a>
-      <a href="https://www.fedex.com" target="_blank">
-        <img src="resources/images/logos/fedex-logo.svg" alt="Fedex Logo" class="partners-logos-brand" />
-      </a>
-    </section>
-
-    <section id="projects">
-      <h1>Recent Projects</h1>
-      <div class="js-projects">
-
-      </div>
-    </section>
-
-    <section id="clients">
-    </section>
-
-    <section id="services">
-    </section>
-
-    <section id="questions">
-    </section>
-  </main>
-
-  <footer>
-    <div class="logo-adress">
-      <img src="./resources/images/logos/circle.svg" alt="Circle Agency Logo" />
-      <p>2972 Westheimer Rd. Santa Ana,<br>Illinois 85486</p>
-    </div>
-
-    <div class="footer-links">
-      <ul>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">About Us</a></li>
-      </ul>
-      <ul>
-        <li><a href="#">Press</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-      </ul>
-    </div>
-
-
-  </footer>
-
-
-
-
-
-</body>
-
+    </footer>
+  </body>
 </html>
