HTML + CSS modifications

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="hero-text">
             <h1>Empower Your Business With Stunning Design!</h1>
             <p>
-              Circle is a digital design and development <br />studio.<br />
+              Circle is a digital design and development studio.<br />
               We design and develop astonishing websites and mobile apps.
             </p>
             <div class="hero-container-button">
@@ -127,8 +127,8 @@
       </section>
 
       <section id="projects">
-        <h2 class="section-title">Recent Projects</h2>
         <div class="container">
+          <h2 class="section-title">Recent<br>Projects</h2>
           <div class="js-projects">
             <div class="project">
               <img
@@ -211,15 +211,13 @@
       </section>
 
       <section id="services">
-        <h2 class="section-title">Our Services</h2>
         <div class="container">
-          <div class="services-container">
-            <div class="services-container-logo">
-              <img
-                src="resources/images/services-section/icons/1.svg"
-                alt="service1 logo"
-              />
-            </div>
+          <h2 class="section-title">Our<br />Services</h2>
+          <div class="service-container">
+            <img
+              src="resources/images/services-section/icons/1.svg"
+              alt="service1 logo"
+            />
             <h3>User Interface Design</h3>
             <p>
               Circle provides you with a stunning user interface design that is
@@ -227,13 +225,11 @@
             </p>
             <a href="#">Learn More</a>
           </div>
-          <div class="services-container">
-            <div class="services-container-logo">
-              <img
-                src="resources/images/services-section/icons/2.svg"
-                alt="service2 logo"
-              />
-            </div>
+          <div class="service-container">
+            <img
+              src="resources/images/services-section/icons/2.svg"
+              alt="service2 logo"
+            />
             <h3>User Experience Design</h3>
             <p>
               Circle always focuses on delivering the best user experience to
@@ -241,13 +237,11 @@
             </p>
             <a href="#">Learn More</a>
           </div>
-          <div class="services-container">
-            <div class="services-container-logo">
-              <img
-                src="resources/images/services-section/icons/3.svg"
-                alt="service3 logo"
-              />
-            </div>
+          <div class="service-container">
+            <img
+              src="resources/images/services-section/icons/3.svg"
+              alt="service3 logo"
+            />
             <h3>Application Development</h3>
             <p>
               We develop high-quality mobile and web applications using the
@@ -258,7 +252,14 @@
         </div>
       </section>
 
-      <section id="questions"></section>
+      <section id="questions">
+        <div class="questions-container">
+          <h3>Do you have any questions?</h3>
+          <p>Let us help you!</p>
+          <input type="text" placeholder="Enter your email">
+          <a href="#" class="contact-btn">Subscribe</a>
+        </div>
+      </section>
     </main>
 
     <footer>
