--- a/index.html
+++ b/index.html
@@ -1,46 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Circle Agency</title>
-    <link rel="stylesheet" href="resources/styles/style.css" />
-  </head>
 
-  <body>
-    <header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Circle Agency</title>
+  <link rel="stylesheet" href="resources/styles/style.css" />
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <nav>
+        <div class="logo">
+          <a href="./index.html">
+            <img src="./resources/images/logos/circle.svg" alt="Circle Agency Logo" />
+          </a>
+        </div>
+
+        <div class="menu">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Project Page-Simple</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+        </div>
+
+        <div class="contact">
+          <a href="#" class="contact-btn">Contact Us</a>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section id="hero">
       <div class="container">
-        <nav>
-          <div class="logo">
-            <a href="./index.html">
-              <img
-                src="./resources/images/logos/circle.svg"
-                alt="Circle Agency Logo"
-              />
-            </a>
-          </div>
-
-          <div class="menu">
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Project Page-Simple</a></li>
-              <li><a href="#">Projects</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">About</a></li>
-            </ul>
-          </div>
-
-          <div class="contact">
-            <a href="#" class="contact-btn">Contact Us</a>
-          </div>
-        </nav>
-      </div>
-    </header>
-
-    <main>
-      <section id="hero">
-        <div class="container">
+        <div class="hero-container">
           <div class="hero-text">
             <h1>Empower Your Business With Stunning Design!</h1>
             <p>
@@ -54,170 +53,135 @@
           </div>
 
           <div class="hero-pictures">
-            <img
-              src="resources\images\hero-section\hero-image.png"
-              alt="Hero Image"
-            />
-            <img
-              src="resources\images\hero-section\card-1.png"
-              alt="Hero Image"
-            />
-            <img
-              src="resources\images\hero-section\card-2.png"
-              alt="Hero Image"
-            />
+            <img src="resources\images\hero-section\hero-image.png" alt="Hero Image" />
+            <img src="resources\images\hero-section\card-1.png" alt="Hero Image" />
+            <img src="resources\images\hero-section\card-2.png" alt="Hero Image" />
           </div>
         </div>
-      </section>
 
-      <section id="partners">
-        <div class="container">
-          <div class="partners-logos">
-            <a href="https://www.amazon.es" target="_blank">
-              <img
-                src="resources/images/logos/amazon-logo.svg"
-                alt="Amazon Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-            <a href="https://www.nike.com" target="_blank">
-              <img
-                src="resources/images/logos/Logo_NIKE.svg"
-                alt="Nike Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-            <a href="https://www.adidas.com" target="_blank">
-              <img
-                src="resources/images/logos/Adidas_Logo.svg"
-                alt="Adidas Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-            <a href="https://www.airbnb.com" target="_blank">
-              <img
-                src="resources/images/logos/airbnb-logo.svg"
-                alt="Airbnb Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-            <a href="https://www.google.es" target="_blank">
-              <img
-                src="resources/images/logos/google-logo.svg"
-                alt="Google Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-            <a href="https://www.microsoft.com" target="_blank">
-              <img
-                src="resources/images/logos/microsoft-logo.svg"
-                alt="Microsoft Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-            <a href="https://www.fedex.com" target="_blank">
-              <img
-                src="resources/images/logos/fedex-logo.svg"
-                alt="Fedex Logo"
-                class="partners-logos-brand"
-              />
-            </a>
-          </div>
+      </div>
+    </section>
+
+    <section id="partners">
+      <div class="container">
+        <div class="partners-logos">
+          <a href="https://www.amazon.es" target="_blank">
+            <img src="resources/images/logos/amazon-logo.svg" alt="Amazon Logo" class="partners-logos-brand" />
+          </a>
+          <a href="https://www.nike.com" target="_blank">
+            <img src="resources/images/logos/Logo_NIKE.svg" alt="Nike Logo" class="partners-logos-brand" />
+          </a>
+          <a href="https://www.adidas.com" target="_blank">
+            <img src="resources/images/logos/Adidas_Logo.svg" alt="Adidas Logo" class="partners-logos-brand" />
+          </a>
+          <a href="https://www.airbnb.com" target="_blank">
+            <img src="resources/images/logos/airbnb-logo.svg" alt="Airbnb Logo" class="partners-logos-brand" />
+          </a>
+          <a href="https://www.google.es" target="_blank">
+            <img src="resources/images/logos/google-logo.svg" alt="Google Logo" class="partners-logos-brand" />
+          </a>
+          <a href="https://www.microsoft.com" target="_blank">
+            <img src="resources/images/logos/microsoft-logo.svg" alt="Microsoft Logo" class="partners-logos-brand" />
+          </a>
+          <a href="https://www.fedex.com" target="_blank">
+            <img src="resources/images/logos/fedex-logo.svg" alt="Fedex Logo" class="partners-logos-brand" />
+          </a>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section id="projects">
-        <div class="container">
-          <h2 class="section-title">Recent<br>Projects</h2>
-          <div class="js-projects">
-            <div class="project">
-              <img
-                src="resources/images/projects-section/1.jpg"
-                alt="Project Imagen"
-              />
-              <div class="text-project">
-                <h3>
-                  sunt aut facere repellat provident occaecati excepturi optio
-                  reprehenderit
-                </h3>
-                <p>
-                  quia et suscipit suscipit recusandae consequuntur expedita et
-                  cum reprehenderit molestiae ut ut quas totam nostrum rerum est
-                  autem sunt rem eveniet architecto
-                </p>
-                <a href="project.html?id=1">Learn More</a>
-              </div>
+    <section id="projects">
+      <div class="container">
+        <h2 class="section-title">Recent Projects</h2>
+        <div class="js-projects">
+          <div class="project">
+
+            <img src="resources/images/projects-section/1.jpg" alt="Project Imagen" />
+
+
+            <div class="text-project">
+              <h3>
+                sunt aut facere repellat provident occaecati excepturi optio
+                reprehenderit
+              </h3>
+              <p>
+                quia et suscipit suscipit recusandae consequuntur expedita et
+                cum reprehenderit molestiae ut ut quas totam nostrum rerum est
+                autem sunt rem eveniet architecto
+              </p>
+              <a href="project.html?id=1">Learn More</a>
             </div>
+          </div>
 
-            <div class="project">
-              <img
-                src="resources/images/projects-section/2.jpg"
-                alt="Project Imagen"
-              />
-              <div class="text-project">
-                <h3>
-                  sunt aut facere repellat provident occaecati excepturi optio
-                  reprehenderit
-                </h3>
-                <p>
-                  quia et suscipit suscipit recusandae consequuntur expedita et
-                  cum reprehenderit molestiae ut ut quas totam nostrum rerum est
-                  autem sunt rem eveniet architecto
-                </p>
-                <a href="project.html?id=1">Learn More</a>
-              </div>
+          <div class="project">
+            <img src="resources/images/projects-section/2.jpg" alt="Project Imagen" />
+            <div class="text-project">
+              <h3>
+                sunt aut facere repellat provident occaecati excepturi optio
+                reprehenderit
+              </h3>
+              <p>
+                quia et suscipit suscipit recusandae consequuntur expedita et
+                cum reprehenderit molestiae ut ut quas totam nostrum rerum est
+                autem sunt rem eveniet architecto
+              </p>
+              <a href="project.html?id=1">Learn More</a>
             </div>
+          </div>
 
-            <div class="project">
-              <img
-                src="resources/images/projects-section/3.jpg"
-                alt="Project Imagen"
-              />
-              <div class="text-project">
-                <h3>
-                  sunt aut facere repellat provident occaecati excepturi optio
-                  reprehenderit
-                </h3>
-                <p>
-                  quia et suscipit suscipit recusandae consequuntur expedita et
-                  cum reprehenderit molestiae ut ut quas totam nostrum rerum est
-                  autem sunt rem eveniet architecto
-                </p>
-                <a href="project.html?id=1">Learn More</a>
-              </div>
+          <div class="project">
+            <img src="resources/images/projects-section/3.jpg" alt="Project Imagen" />
+            <div class="text-project">
+              <h3>
+                sunt aut facere repellat provident occaecati excepturi optio
+                reprehenderit
+              </h3>
+              <p>
+                quia et suscipit suscipit recusandae consequuntur expedita et
+                cum reprehenderit molestiae ut ut quas totam nostrum rerum est
+                autem sunt rem eveniet architecto
+              </p>
+              <a href="project.html?id=1">Learn More</a>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section id="clients">
-        <div class="container">
-          <h2>Hear What Our Clients Have to Say</h2>
-          <p>
-            "Circle helped us through every stage of our startup. We really
-            enjoyed working with you."
-          </p>
-          <div class="profile">
-            <img
-              src="resources/images/testimonial-section/profile.png"
-              alt="Profile Image"
-            />
-            <div>
-              <h4>Kristin Watson</h4>
-              <span>Booking.com</span>
-            </div>
+    <section id="clients">
+      <div class="container">
+        <h2>Hear What Our Clients Have to Say</h2>
+        <p>
+          "Circle helped us through every stage of our startup. We really
+          enjoyed working with you."
+        </p>
+        <div class="profile">
+          <img src="resources/images/testimonial-section/profile.png" alt="Profile Image" />
+          <div>
+            <h4>Kristin Watson</h4>
+            <span>Booking.com</span>
           </div>
         </div>
-      </section>
+        <div class="emojis">
+          <img src="resources/images/testimonial-section/memoji-1.png" alt=""><img
+            src="resources/images/testimonial-section/memoji-2.png" alt=""><img
+            src="resources/images/testimonial-section/memoji-3.png" alt=""><img
+            src="resources/images/testimonial-section/memoji-4.png" alt="">
+        </div>
+      </div>
+    </section>
 
-      <section id="services">
-        <div class="container">
-          <h2 class="section-title">Our<br />Services</h2>
-          <div class="service-container">
-            <img
-              src="resources/images/services-section/icons/1.svg"
-              alt="service1 logo"
-            />
+    <section id="services">
+      <div class="container">
+        <h2 class="section-title">Our Services</h2>
+
+        <div class="services-container">
+
+
+          <div class="service">
+            <div class="img-container">
+              <img src="resources/images/services-section/icons/1.svg" alt="service1 logo" />
+            </div>
             <h3>User Interface Design</h3>
             <p>
               Circle provides you with a stunning user interface design that is
@@ -225,11 +189,11 @@
             </p>
             <a href="#">Learn More</a>
           </div>
-          <div class="service-container">
-            <img
-              src="resources/images/services-section/icons/2.svg"
-              alt="service2 logo"
-            />
+
+          <div class="service">
+            <div class="img-container">
+              <img src="resources/images/services-section/icons/2.svg" alt="service2 logo" />
+            </div>
             <h3>User Experience Design</h3>
             <p>
               Circle always focuses on delivering the best user experience to
@@ -237,11 +201,11 @@
             </p>
             <a href="#">Learn More</a>
           </div>
-          <div class="service-container">
-            <img
-              src="resources/images/services-section/icons/3.svg"
-              alt="service3 logo"
-            />
+
+          <div class="service">
+            <div class="img-container">
+              <img src="resources/images/services-section/icons/3.svg" alt="service3 logo" />
+            </div>
             <h3>Application Development</h3>
             <p>
               We develop high-quality mobile and web applications using the
@@ -249,20 +213,30 @@
             </p>
             <a href="#">Learn More</a>
           </div>
-        </div>
-      </section>
 
-      <section id="questions">
+        </div>
+
+      </div>
+    </section>
+
+    <section id="questions">
+      <div class="container">
         <div class="questions-container">
           <h3>Do you have any questions?</h3>
           <p>Let us help you!</p>
-          <input type="text" placeholder="Enter your email">
-          <a href="#" class="contact-btn">Subscribe</a>
-        </div>
-      </section>
-    </main>
+          <div class="input-container">
+            <input type="text" placeholder="Enter your email">
+            <a href="#" class="contact-btn">Subscribe</a>
+          </div>
 
-    <footer>
+        </div>
+      </div>
+
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">
       <div class="footer-address">
         <div class="footer-address-logo">
           <img src="./resources/images/logos/circle.svg" alt="Logo Circle" />
@@ -279,6 +253,9 @@
         <a href="#">Projects</a>
         <a href="#">Privacy Policy</a>
       </div>
-    </footer>
-  </body>
+    </div>
+
+  </footer>
+</body>
+
 </html>
